@@ -12,6 +12,7 @@ Trunk (unreleased changes)
   BUG FIXES
    HADOOP-2059 In tests, exceptions in min dfs shutdown should not fail test
                (e.g. nightly #272)
+   HADOOP-2064 TestSplit assertion and NPE failures (Patch build #952 and #953)
 
   IMPROVEMENTS
     HADOOP-2401 Add convenience put method that takes writable
